# Datewise-Sheet-Generator

./: .gitattributes  LICENSE  README.md
Development/: pyproject.toml
Development/1.2.0v/alphas/: Main_GUI_screen_test1.py
Development/1.2.0v/alphas/GUI_Base/: _GUI_COMPONENT_with_themes_ver4.py
Development/1.2.0v/alphas/GUI_Base/themes_for_gui.egg-info/: SOURCES.txt
Development/1.2.0v/alphas/testing_json_saves/: save1_alpha.json
Development/GUI_Module.egg-info/: PKG-INFO  SOURCES.txt
Development/Testing-ground/: Main_GUI_screen_test1.py  Temp_sheet_gen.xlsx  chk.py  excel_extractors.py  first_test_GUI.py  save1_alpha.json  testing-table-manipulation.py
Development/Testing-ground/GUI_Base/: _GUI_COMPONENT_with_themes_ver4.py
Development/Testing-ground/GUI_Base/themes_for_gui.egg-info/: top_level.txt
Versions/1.0.0v/: DATEWISE_SALES_VALIDATED_2024.xlsx  DSG_V1.py  README!.txt
Versions/1.2.0v/alphas/: Main_GUI_screen_test1.spec  excel_extractors.py  testing_excel.xlsx
Versions/1.2.0v/alphas/GUI_Base/: _GUI_COMPONENT_with_themes_ver4.py  pyproject.toml
Versions/1.2.0v/alphas/GUI_Base/themes_for_gui.egg-info/: PKG-INFO
Versions/1.2.0v/alphas/GUI_Base/themes_section/: themes.py
