[project]
name = "themes_for_gui"
version = "0.1.0"
description = "PyQt5 and PyQt6 modulated implementation with a main window construction class for themes."
authors = [
    { name="Mirza Ishan Beg", email="mirzaishanb@gmail.com" }
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
